--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,6 @@ a {
 
 .about-me{
     grid-row: 2;
-    grid-column: 1;
     grid-column: 1/-1
 }
 
@@ -73,13 +72,28 @@ a {
  }
 
 .project {
-    flex-basis: 20%;
+    flex-basis: 50%;
     flex-shrink: 0;
     padding: 1rem;
     background: #1e293b;
     padding: 10px;
     margin: 10px 0;
     border-radius: 8px;
+}
+
+.project-image {
+    width: 100%;
+    height: 150px;
+    object-fit: contain;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    background-color: #fff;
+}
+
+.project-image:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .left,
@@ -89,13 +103,7 @@ a {
    cursor: pointer;
    color: brown;
    font-size: 5rem;
-   /* overflow: hidden; */
    z-index: 100;
-   /* padding-left: 10px;
-   padding-right: 10px; */
-}
-.right{
-    padding-right: 60px;
 }
 .user {
     vertical-align: middle;
