--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,48 @@ a {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
+.footer-project{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.footer-project-img {
+    display: inline-block;
+    position: relative;
+    width: 40px;
+    height: 40px;
+}
+
+.footer-project-img img {
+    width: 100%;
+    height: 30px;
+    object-fit: contain;
+}
+
+.footer-project-img::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    bottom: 110%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 0.9em;
+    white-space: nowrap;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    pointer-events: none;
+}
+
+.footer-project-img:hover::after {
+    opacity: 1;
+    visibility: visible;
+}
+
 .left,
 .right {
    border: none;
@@ -105,6 +147,7 @@ a {
    font-size: 5rem;
    z-index: 100;
 }
+
 .user {
     vertical-align: middle;
     width: 190px;
