--- a/styles.css
+++ b/styles.css
@@ -102,18 +102,19 @@ a {
     justify-content: space-evenly;
 }
 
-.footer-project-img {
-    display: inline-block;
-    position: relative;
-    width: 40px;
+.footer-project img {
+    /* display: inline-block;
+    position: relative; */
+    width: 100%;
     height: 40px;
+    object-fit: contain;
 }
 
-.footer-project-img img {
+/* .footer-project-img img {
     width: 100%;
     height: 30px;
     object-fit: contain;
-}
+} */
 
 /* .footer-project-img::after {
     content: attr(data-tooltip);
